try it out in swagger enabled + add parameters for entities endpoint
